[gd_scene load_steps=23 format=3 uid="uid://cyn7r4y248k68"]

[ext_resource type="Texture2D" uid="uid://b8i58el7y56a0" path="res://Resource/Levels/background_assets/day.png" id="1_6ptqh"]
[ext_resource type="Script" uid="uid://dwrqqa36ydbf5" path="res://Resource/Levels/Tutorial_Part/level_1_tutorial_day_1.gd" id="1_g82a1"]
[ext_resource type="PackedScene" uid="uid://c3mfdn3yeigf3" path="res://Behaviour/lane_.tscn" id="1_ua7g3"]
[ext_resource type="PackedScene" uid="uid://blukyqjnvn6ib" path="res://Resource/Levels/background_assets/single_grass_grow.tscn" id="3_07860"]
[ext_resource type="Texture2D" uid="uid://dkbv4b0so7exb" path="res://HUD/borders/Tutorial_HUD/tutorial_part1_1.png" id="4_07860"]
[ext_resource type="PackedScene" uid="uid://dols1i410thmc" path="res://HUD/borders/level_manager/main_camera.tscn" id="4_mbpro"]
[ext_resource type="PackedScene" uid="uid://d1bmnixb7oepy" path="res://Behaviour/sun_falling_behaviour.tscn" id="5_2uc7d"]
[ext_resource type="Texture2D" uid="uid://fnobwk25x023" path="res://HUD/borders/Tutorial_HUD/tutorial_part1_2.png" id="5_pui1u"]
[ext_resource type="Texture2D" uid="uid://d37ino0dkhp1u" path="res://HUD/borders/Tutorial_HUD/tutorial_part1_3.png" id="6_cmubk"]
[ext_resource type="PackedScene" uid="uid://pspn4765e0xo" path="res://HUD/borders/level_manager/zombie_wave_management.tscn" id="6_hwwk8"]
[ext_resource type="Texture2D" uid="uid://myb4kosiiy0b" path="res://HUD/borders/Tutorial_HUD/tutorial_part1_4.png" id="7_cmubk"]
[ext_resource type="PackedScene" uid="uid://rvbwdqhikigs" path="res://HUD/borders/level_manager/wave.tscn" id="7_ewpwe"]
[ext_resource type="PackedScene" uid="uid://bogab6oeo22f2" path="res://unit/Zombie/basic_zombie/normal_basic_zombie.tscn" id="8_g82a1"]
[ext_resource type="Texture2D" uid="uid://263vj11nyjjn" path="res://unit/plant/Sunflower/sunflower_seed_packet.png" id="10_mbpro"]
[ext_resource type="PackedScene" uid="uid://y1wnytmunqr8" path="res://HUD/borders/level_manager/new_plant_unlock_reward_node.tscn" id="11_ugfa7"]
[ext_resource type="PackedScene" uid="uid://bj5p7r8n80cn" path="res://HUD/debug_mode.tscn" id="12_07860"]

[sub_resource type="Animation" id="Animation_cmubk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-785, -40)]
}

[sub_resource type="Animation" id="Animation_pui1u"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-785, -40), Vector2(-770.73, -40)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qqkus"]
_data = {
&"RESET": SubResource("Animation_cmubk"),
&"idle": SubResource("Animation_pui1u")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewpwe"]
size = Vector2(1295, 699)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbpro"]
size = Vector2(195, 111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmubk"]
size = Vector2(798, 720.5)

[node name="level_1_tutorial_day1" type="Node2D"]
position = Vector2(539, 404)
script = ExtResource("1_g82a1")

[node name="Day" type="Sprite2D" parent="."]
position = Vector2(1198, 136)
texture = ExtResource("1_6ptqh")

[node name="SingleGrassGrow" parent="Day" instance=ExtResource("3_07860")]
position = Vector2(-1211, 116)

[node name="TutorialPart11" type="Sprite2D" parent="Day"]
visible = false
position = Vector2(-785, -40)
texture = ExtResource("4_07860")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Day/TutorialPart11"]
libraries = {
&"": SubResource("AnimationLibrary_qqkus")
}
autoplay = "idle"

[node name="TutorialPart12" type="Sprite2D" parent="Day"]
visible = false
position = Vector2(-749, 4)
texture = ExtResource("5_pui1u")

[node name="TutorialPart13" type="Sprite2D" parent="Day"]
visible = false
position = Vector2(-749, 4)
texture = ExtResource("6_cmubk")

[node name="TutorialPart14" type="Sprite2D" parent="Day"]
visible = false
position = Vector2(-773, 23)
texture = ExtResource("7_cmubk")

[node name="main_camera" parent="." instance=ExtResource("4_mbpro")]
position = Vector2(421, 136)
_mode = "normal_mode_with_pick"
sun_on_start = 150
level_name = "DAY 1-1"

[node name="lane_3" parent="." instance=ExtResource("1_ua7g3")]
position = Vector2(0, 332)
lane_collision_layer = "lane3"
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="sun_falling_behaviour" parent="." node_paths=PackedStringArray("sun_location_where_it_land") instance=ExtResource("5_2uc7d")]
position = Vector2(0, -3)
sun_location_where_it_land = NodePath("CollisionShape2D")
cooldown_time = 7.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sun_falling_behaviour"]
position = Vector2(654.5, 219.5)
shape = SubResource("RectangleShape2D_ewpwe")

[node name="zombie_wave_management" parent="." node_paths=PackedStringArray("final_as_reward", "lane_1", "lane_2", "lane_3", "lane_4", "lane_5", "lane_6", "lane_7", "collision_where_zombie_is_place_preview") instance=ExtResource("6_hwwk8")]
offset_left = -576.0
offset_top = 804.0
offset_right = 944.0
offset_bottom = 2004.0
mouse_filter = 2
progress_bar_wave_scene = "uid://dr682qf7yx8v2"
delay_before_game_start = 1.0
final_as_reward = NodePath("../NewPlantUnlockRewardNode")
lane_1 = NodePath("../lane_3")
lane_2 = NodePath("../lane_3")
lane_3 = NodePath("../lane_3")
lane_4 = NodePath("../lane_3")
lane_5 = NodePath("../lane_3")
lane_6 = NodePath("../lane_3")
lane_7 = NodePath("../lane_3")
collision_where_zombie_is_place_preview = NodePath("../preview_zombie")

[node name="wave2" parent="zombie_wave_management" instance=ExtResource("7_ewpwe")]
layout_mode = 2
_delay_duration = 10.0
_trigger_next_wave_if_this_is_clear = true

[node name="wave" parent="zombie_wave_management" instance=ExtResource("7_ewpwe")]
layout_mode = 2
_delay_duration = 30.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 1.0

[node name="wave3" parent="zombie_wave_management" instance=ExtResource("7_ewpwe")]
layout_mode = 2
_delay_duration = 30.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true
_delay_interval_between_spawn = 2.0
_number_of_zombies_in_big_wave = 12

[node name="wave4" parent="zombie_wave_management" instance=ExtResource("7_ewpwe")]
layout_mode = 2
_delay_duration = 30.0
_trigger_next_wave_if_this_is_clear = true
_zombie_spawn_with_delay_in_between = true

[node name="NewPlantUnlockRewardNode" parent="." instance=ExtResource("11_ugfa7")]
position = Vector2(523, -52)
_reward_description = "Produce sun continuesly"
_next_scene_to_play = "uid://2rxynntrbfee"
level_data_name = "day1-1"
_plant_name = "Sunflower"
_unlock_plant_tier_1 = true

[node name="SeedPacket" type="Sprite2D" parent="NewPlantUnlockRewardNode"]
z_index = 155
position = Vector2(-2, 0)
texture = ExtResource("10_mbpro")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewPlantUnlockRewardNode"]
position = Vector2(-2.5, -6.5)
shape = SubResource("RectangleShape2D_mbpro")

[node name="for_storing_groups_of_zombies" type="Node2D" parent="."]

[node name="BasicZombie" parent="for_storing_groups_of_zombies" instance=ExtResource("8_g82a1")]
position = Vector2(-166, 1246)

[node name="BasicZombie2" parent="for_storing_groups_of_zombies" instance=ExtResource("8_g82a1")]
position = Vector2(86, 1255)

[node name="BasicZombie3" parent="for_storing_groups_of_zombies" instance=ExtResource("8_g82a1")]
position = Vector2(77, 1119)

[node name="BasicZombie5" parent="for_storing_groups_of_zombies" instance=ExtResource("8_g82a1")]
position = Vector2(336, 967)

[node name="BasicZombie7" parent="for_storing_groups_of_zombies" instance=ExtResource("8_g82a1")]
position = Vector2(292, 942)

[node name="BasicZombie8" parent="for_storing_groups_of_zombies" instance=ExtResource("8_g82a1")]
position = Vector2(577, 954)

[node name="BasicZombie10" parent="for_storing_groups_of_zombies" instance=ExtResource("8_g82a1")]
position = Vector2(533, 929)

[node name="DebugMode" parent="." instance=ExtResource("12_07860")]
visible = false
position = Vector2(-540, -404)

[node name="preview_zombie" type="CollisionShape2D" parent="."]
position = Vector2(2154, 119)
shape = SubResource("RectangleShape2D_cmubk")
